# recolens

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: BENCHMARK.generated.md
docs/adr/: ADR-0001-decomposed-prior-art.md  ADR-0002-language-and-packaging.md  ADR-0003-llm-provider-default.md  ADR-0004-vector-backend.md  ADR-0005-metric-conformance.md  ADR-0006-supply-chain-defense.md  ADR-0007-protobuf-contract.md  ADR-0008-embedding-model-adoption.md  ADR-0009-hybrid-fusion-and-negative-result.md  ADR-0010-two-stage-learned-reranking.md  README.md
docs/demo-viewer/: index.html
docs/evidence/: embedding_spike_b1.md  ltr_industry_standard_2026.md  metrics_definitions.md  perf_cost_tradeoff.md  prior_art_catalog.md  real_data_movielens.md
docs/golden/: classification_cases.jsonl  eval_metrics.json  moderation_cases.jsonl
recolens/: __init__.py  cli.py
recolens/core/: ab.py  bench.py  embedding.py  evaluate.py  manifest.py  metrics.py  pipeline.py  rank.py  schema.py  vector_index.py
recolens/datasets/: __init__.py  movielens.py
recolens/proto/: codec.py  recolens.proto  recolens_pb2.py
recolens/providers/: base.py  embed_local.py  llm_mock.py  llm_ollama.py  rank_lightgbm.py  vector_qdrant.py
runs/20260630T135500Z/: manifest.json
runs/20260630T140408Z/: manifest.json
runs/20260630T140409Z/: manifest.json
runs/20260630T140410Z/: manifest.json
runs/20260630T140411Z/: manifest.json
runs/20260630T140713Z/: manifest.json
runs/20260630T140714Z/: manifest.json
scripts/: audit_deps.py  fetch_movielens.py  gen_demo_svg.py  gen_proto.sh  gen_report.py  private_path_check.sh
tests/: test_bench.py  test_core.py  test_eval_ab_golden.py  test_llm_golden.py  test_llm_layer.py  test_metrics.py  test_movielens.py  test_proto_codec.py  test_providers.py  test_recommenders.py  test_reranker.py  test_smoke.py
(+31 files in other folders)
