[project]
name = "recolens"
version = "0.1.0"
description = "Local, free content recommendation & search mini-platform with an evaluation harness (KPI / A-B / cost-latency)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "leagames0221-sys" }]
keywords = ["recommendation", "search", "vector-search", "evaluation", "llmops", "mlops"]

# C-1: runtime 依存ゼロ志向。default は外部サービス無しに決定論で完走する(K-2/K-3)。
# 重量級は optional extras に隔離し、追加には ADR を要する。
dependencies = []

[project.optional-dependencies]
# 実埋め込み(ローカル)。EMBED_PROVIDER=local の時のみ必要。
embed = ["sentence-transformers>=2.7", "numpy>=1.24"]
# Qdrant ベクトルバックエンド。VECTOR_BACKEND=qdrant の時のみ必要。
vector = ["qdrant-client>=1.9"]
# ローカル LLM(分類/不正検知)。LLM_PROVIDER=ollama の時のみ必要。
llm = ["ollama>=0.2"]
# 学習型リランカー(stage-2 LambdaMART)。--reranker lightgbm の時のみ必要。
# LightGBM=MIT、scikit-learn(LGBMRanker sklearn API に必須)=BSD-3。
rank = ["lightgbm>=4.0", "scikit-learn>=1.3"]
# 開発・検証。protoc は grpcio-tools 同梱を使う(system protoc 不要)。
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "grpcio-tools>=1.62",
  "ir-measures>=0.3",
  "pyyaml>=6",
]

[project.scripts]
recolens = "recolens.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["recolens"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["recolens/proto/recolens_pb2.py"]  # generated

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"scripts/gen_report.py" = ["E501"]  # inline HTML/CSS template lines

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # cosmetic: we predict on plain float lists (no column names) by design
    "ignore:X does not have valid feature names:UserWarning",
]
